too many changes

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -31,9 +31,9 @@
                 <menu>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a id="active" href="articles.html">Articles</a></li>
+                        <li><a href="articles.html">Articles</a></li>
                         <li><a href="events.html">Events</a></li>
-                        <li><a href="aboutUs.html">About us</a></li>
+                        <li><a id="active" href="aboutUs.html">About us</a></li>
                     </ul>
                     <div class="search">
                         <svg width="31" height="30" viewBox="0 0 31 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -46,91 +46,43 @@
                 <main class="main">
                     <div class="wrapper">
                         <div class="contentBlock">
-                            <menu class="menuArticles">
-                                <ul>
-                                    <li><a id="active" href="articles.html">VIEW ALL</a></li>
-                                    <li><a href="./articles/science.html">SCIENCE</a></li>
-                                    <li><a href="./articles/art.html">ART</a></li>
-                                    <li><a href="./articles/travel.html">TRAVEL</a></li>
-                                    <li><a href="./articles/technology.html">TECHNOLOGY</a></li>
-                                </ul>
-                            </menu>
-                            <div class="articleItemBlock">
-                                <div class="contentLatestBlock articleImg">
-                                    <img src="./img/news/image_1.png" alt="img">
-                                    <div class="contentLatestBoxItem articleBoxItem">
-                                        <div class="infoBox">
-                                            <p class="titleLatest"></p>
-                                            <a href="./articles/science.html" class="categoryItem">SCIENCE</a>
-                                            <p class="dateBlock">10 October 2024</p>
-                                        </div>
-                                        <span class="contentArticleTitle">TITLE</span>
-                                        <p class="contentArticleItemText">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam quis quam. Morbi scelerisque luctus velit. Fusce wisi. Aliquam id dolor. Suspendisse sagittis ultrices augue. Mauris suscipit, ligula sit amet pharetra semper, nibh ante cursus purus, vel sagittis velit mauris vel metus. Etiam quis quam. </p>
-                                        <button class="readMoreButton articleButton">Read more</button>
-                                    </div>
-                                </div>
+                            <div class="aboutUsBox">
+                                <img src="" alt="">
+                                <svg width="70" height="34" viewBox="0 0 70 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M0.84375 34V0.390625H3.86719V34H0.84375ZM13.6016 3.27344V15.7656H26.4688V18.6484H13.6016V34H10.5781V0.390625H29.4922V3.27344H13.6016ZM43.3594 34V0.390625H46.3828V34H43.3594ZM61.25 3.27344V34H58.2266V3.27344H50.2109V0.390625H69.2656V3.27344H61.25Z" fill="#CD0606"/>
+                                </svg>
+                                <p class="aboutUsArticleItemText">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam quis quam. Morbi scelerisque luctus velit. Fusce wisi. Aliquam id dolor. Suspendisse sagittis ultrices augue. Mauris suscipit, ligula sit amet pharetra semper, nibh ante cursus purus, vel sagittis velit mauris vel metus. Etiam quis quam. Aliquam erat volutpat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam dapibus fermentum ipsum. Etiam bibendum elit eget erat. Cras pede libero, dapibus nec, pretium sit amet, tempor quis. Mauris elementum mauris vitae tortor. Maecenas sollicitudin. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Praesent vitae arcu tempor neque lacinia pretium. Nam sed tellus id magna elementum tincidunt.
+                                    <br>
+                                    <br>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat. Suspendisse nisl. Aenean id metus id velit ullamcorper pulvinar. Etiam posuere lacus quis dolor. Pellentesque ipsum. Duis viverra diam non justo. Pellentesque ipsum. In convallis. Vivamus luctus egestas leo. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Etiam posuere lacus quis dolor. Cras pede libero, dapibus nec, pretium sit amet, tempor quis. Etiam egestas wisi a erat. Integer vulputate sem a nibh rutrum consequat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos.
+                                    
+                                    </p>                                    
                             </div>
-                            <div class="articleItemBlock">
-                                <div class="contentLatestBlock articleImg">
-                                    <img src="./img/news/image_1.png" alt="img">
-                                    <div class="contentLatestBoxItem articleBoxItem">
-                                        <div class="infoBox">
-                                            <p class="titleLatest"></p>
-                                            <a href="./articles/art.html" class="categoryItem">ART</a>
-                                            <p class="dateBlock">10 October 2024</p>
-                                        </div>
-                                        <span class="contentArticleTitle">TITLE</span>
-                                        <p class="contentArticleItemText">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam quis quam. Morbi scelerisque luctus velit. Fusce wisi. Aliquam id dolor. Suspendisse sagittis ultrices augue. Mauris suscipit, ligula sit amet pharetra semper, nibh ante cursus purus, vel sagittis velit mauris vel metus. Etiam quis quam. </p>
-                                        <button class="readMoreButton articleButton">Read more</button>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="articleItemBlock">
-                                <div class="contentLatestBlock articleImg">
-                                    <img src="./img/news/image_1.png" alt="img">
-                                    <div class="contentLatestBoxItem articleBoxItem">
-                                        <div class="infoBox">
-                                            <p class="titleLatest"></p>
-                                            <a href="./articles/travel.html" class="categoryItem">TRAVEL</a>
-                                            <p class="dateBlock">10 October 2024</p>
-                                        </div>
-                                        <span class="contentArticleTitle">TITLE</span>
-                                        <p class="contentArticleItemText">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam quis quam. Morbi scelerisque luctus velit. Fusce wisi. Aliquam id dolor. Suspendisse sagittis ultrices augue. Mauris suscipit, ligula sit amet pharetra semper, nibh ante cursus purus, vel sagittis velit mauris vel metus. Etiam quis quam. </p>
-                                        <button class="readMoreButton articleButton">Read more</button>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="articleItemBlock">
-                                <div class="contentLatestBlock articleImg">
-                                    <img src="./img/news/image_1.png" alt="img">
-                                    <div class="contentLatestBoxItem articleBoxItem">
-                                        <div class="infoBox">
-                                            <p class="titleLatest"></p>
-                                            <a href="./articles/technology.html" class="categoryItem">TECHNOLOGY</a>
-                                            <p class="dateBlock">10 October 2024</p>
-                                        </div>
-                                        <span class="contentArticleTitle">TITLE</span>
-                                        <p class="contentArticleItemText">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam quis quam. Morbi scelerisque luctus velit. Fusce wisi. Aliquam id dolor. Suspendisse sagittis ultrices augue. Mauris suscipit, ligula sit amet pharetra semper, nibh ante cursus purus, vel sagittis velit mauris vel metus. Etiam quis quam. </p>
-                                        <button class="readMoreButton articleButton">Read more</button>
-                                    </div>
-                                </div>
-                            </div>   
                         </div>
                         <div class="widgetBox">
-                            <section class="widgetBlock">
-                                    <h1 class="subscribeTitle">SUBSCRIBE TO GET MORE</h1>
-                                    <span class="subscribeText">subscribe now with no commitment and no pressure!</span>
-                                    <h1 class="subscribeTitle">WHAT WILL YOU GET?</h1>
-                                    <span class="subscribeText">
-                                        1.Early access to articles<br />
-                                        2.Convert post into podcast<br />
-                                        3.Personal newsletters<br />
-                                        4.No ads
-                                    </span>
-                                    <div class="buttonBox">
-                                        <button class="subscribeButton">Learn more</button>
-                                        <button class="subscribeButton">Buy now for $3.75</button>
-                                    </div>
+                            <section class="eventBox aboutUsAuthors">
+                                <h5 class="titleWidget">AUTHORS</h5>
+                                <aside class="authorItemContainer">
+                                    <a href="authors/Armstong.html" class="eventItem">
+                                        <img class="authorImg" src="" alt="">
+                                        <span class="authorName">Ann Armstong</span>
+                                    </a>
+                                    <a href="authors/Kinsley.html" class="eventItem">
+                                        <img class="authorImg" src="" alt="">
+                                        <span class="authorName">Nicol  Kinsley</span>
+                                    </a>
+                                    <a href="authors/Bufo.html" class="eventItem">
+                                        <img class="authorImg" src="" alt="">
+                                        <span class="authorName">David Bufo</span>
+                                    </a>
+                                    <a href="authors/Json.html" class="eventItem">
+                                        <img class="authorImg" src="" alt="">
+                                        <span class="authorName">Loren Json</span>
+                                    </a>
+                                    <a href="authors/Lodsen.html" class="eventItem">
+                                        <img class="authorImg" src="" alt="">
+                                        <span class="authorName">Jack Lodsen</span>
+                                    </a>
+                                </aside>
                             </section>
                         </div>
                     </div>
